added vars and a prompt.

--- a/basic.html
+++ b/basic.html
@@ -8,7 +8,10 @@
 <body>
     <script>
         console.log("Devin");
-        prompt("Rock, Paper, or scissors")
+        prompt("Rock, Paper, or Scissors")
+        let Rock=("1");
+        let Paper=("2");
+        let Scissors=("3");
     </script>
 </body>
 </html>
